<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegisterFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="641dp"
            android:src="@drawable/paw"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="28dp"
            android:fontFamily="@font/ribeye"
            android:text="@string/Title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/imeTxt"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title" />

        <EditText
            android:id="@+id/editIme"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="68dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ime"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/prezime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/prezimeTxt"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editIme" />

        <EditText
            android:id="@+id/editPrezime"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="68dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prezime"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/usernameTxt"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPrezime" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="68dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/pswrd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/pswrdTxt"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUsername" />

        <EditText
            android:id="@+id/editPswrd"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="68dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pswrd"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/buttonRegister2"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/blue_dark"
            android:fontFamily="@font/amaranth"
            android:text="@string/buttonRegister"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPswrd"
            app:strokeColor="@color/white"
            app:strokeWidth="3dp" />

        <Button
            android:id="@+id/returnButton2"
            android:layout_width="183dp"
            android:layout_height="60dp"
            android:layout_marginStart="114dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="114dp"
            android:backgroundTint="@color/blue_dark"
            android:fontFamily="@font/amaranth"
            android:text="@string/returnButton"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="24sp"
            app:cornerRadius="20dp"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister2"
            app:strokeColor="@color/white"
            app:strokeWidth="3dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>