<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="641dp"
            android:src="@drawable/paw"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="28dp"
            android:fontFamily="@font/ribeye"
            android:text="@string/Title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="110dp"
            android:text="@string/usernameTxt"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginEnd="67dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/pswrd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginTop="30dp"
            android:text="@string/pswrdTxt"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUsername" />

        <EditText
            android:id="@+id/editPswrd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginEnd="67dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pswrd"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/buttonLogin2"
            android:layout_width="183dp"
            android:layout_height="60dp"
            android:layout_marginStart="114dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="114dp"
            android:backgroundTint="@color/blue_dark"
            android:fontFamily="@font/amaranth"
            android:text="@string/buttonLogin"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="24sp"
            app:cornerRadius="20dp"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPswrd"
            app:strokeColor="@color/white"
            app:strokeWidth="3dp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/returnButton1"
            android:layout_width="183dp"
            android:layout_height="60dp"
            android:layout_marginStart="114dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="114dp"
            android:backgroundTint="@color/blue_dark"
            android:fontFamily="@font/amaranth"
            android:text="@string/returnButton"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="24sp"
            app:cornerRadius="20dp"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin2"
            app:strokeColor="@color/white"
            app:strokeWidth="3dp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>