<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/StartFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <TextView
            android:id="@+id/headTitle"
            android:layout_width="372dp"
            android:layout_height="130dp"
            android:layout_marginStart="107dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="107dp"
            android:fontFamily="@font/ribeye"
            android:text="@string/Title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="126dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="127dp"
            android:src="@drawable/paws"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headTitle" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="183dp"
            android:layout_height="78dp"
            android:layout_marginStart="156dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="157dp"
            android:backgroundTint="@color/blue_dark"
            android:fontFamily="@font/amaranth"
            android:text="@string/buttonLogin"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="24sp"
            app:cornerRadius="20dp"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo"
            app:strokeColor="@color/white"
            app:strokeWidth="3dp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="260dp"
            android:layout_height="78dp"
            android:layout_marginStart="134dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="135dp"
            android:backgroundTint="@color/blue_dark"
            android:fontFamily="@font/amaranth"
            android:text="@string/buttonRegister"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="24sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            app:strokeColor="@color/white"
            app:strokeWidth="3dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>